# ChangeLog for media-libs/libvisio
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libvisio/ChangeLog,v 1.26 2012/05/05 08:02:37 jdhore Exp $

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> libvisio-0.0.15.ebuild,
  libvisio-0.0.16.ebuild, libvisio-9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  26 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> libvisio-0.0.15.ebuild:
  ppc stable wrt bug#411449.

*libvisio-0.0.16 (16 Apr 2012)

  16 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libvisio-0.0.16.ebuild:
  Version bump to latest.

  06 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libvisio-0.0.14-r1.ebuild,
  libvisio-0.0.15.ebuild:
  Stabilise 0.0.15 on amd64 and x86. Drop overshadowed.

*libvisio-0.0.15 (01 Mar 2012)

  01 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libvisio-0.0.15.ebuild:
  Version bump to latest.

*libvisio-0.0.14-r1 (18 Feb 2012)

  18 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libvisio-0.0.14.ebuild,
  +libvisio-0.0.14-r1.ebuild, libvisio-9999.ebuild:
  Change the docdir to be /usr/share/doc not /usr/share wrt bug#403943.

  15 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> libvisio-0.0.14.ebuild,
  libvisio-9999.ebuild:
  Sync with live ebuild.

  15 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libvisio-0.0.8.ebuild,
  libvisio-0.0.14.ebuild:
  Fix libvisio not install doc to correct location. Stable 0.0.14 on amd64 and
  x86. Fixes bug #403943

  14 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> libvisio-0.0.14.ebuild:
  Fix typo wrt bug #401531.

*libvisio-0.0.14 (25 Jan 2012)

  25 Jan 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libvisio-0.0.12.ebuild,
  +libvisio-0.0.14.ebuild:
  Version bump to latest, drop older.

  12 Jan 2012; Tomáš Chvátal <scarabeus@gentoo.org> libvisio-0.0.12.ebuild,
  libvisio-9999.ebuild:
  Depend on boost per bug #398637.

*libvisio-0.0.12 (09 Jan 2012)
