@@ -1,7 +1,25 @@
-DIST libvisio-0.0.15.tar.xz 317732 RMD160 24a97c9473fe9c2df9f3672a9f6747ab39c07987 SHA1 62e665d08d43348cc8317b09b5b2f0ada324229e SHA256 a787af52c230003c69b96906cb3ff1255d1d3fc0af0bf32d6e01190d5f2b1a92
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST libvisio-0.0.16.tar.xz 318296 RMD160 fe5fca2fba490a4cef7b23104ce2e58374f09451 SHA1 c9e943728431e8614d4212e1be705f2a44855dd0 SHA256 62fea7ed3d441179a636efdf0297284fbddfa7fb2a5be3b1dd9468ba6da8f5d0
-EBUILD libvisio-0.0.15.ebuild 1172 RMD160 111dab0adc4dc71fbc39614352aa8f5d4bb4467f SHA1 75264ffad59778d154747fa6baf83fa70bb81a68 SHA256 9fae4d33aa0131b72563722dcf8d1d64ab44c1221753a2c3f01d2aa92e46959d
-EBUILD libvisio-0.0.16.ebuild 1175 RMD160 a09e0f58d203f89034ad1092b4415318718dc5c8 SHA1 f8f396894e74dde1717d04e99c129205c59b3f7b SHA256 5e04549c18d7ea7d64785fda0289065f15f9ea3d2219a6a93b4252bc55b4c4d0
+EBUILD libvisio-0.0.16.ebuild 1175 RMD160 a6adc346ae86a60c4829aba79e27dde51ec44d06 SHA1 f5d35b60e483ff210ec1e7de660f612c90859011 SHA256 b1335c612107d9e69d215e42203c4ea094c044dfc31d6c7231cbce0e500d280f
 EBUILD libvisio-9999.ebuild 1174 RMD160 15e5a9993356837acbbf652c8680ace19f66ee9b SHA1 49e3d8ae91c8ff22f5dafce4a4c5d26e7830d969 SHA256 3edb527123ab2f9dbd3d78e5432eb482f9454e5a4fa4ef64ca2b8f3fa361c2bd
-MISC ChangeLog 4469 RMD160 59e26075d37529508466d5c13762cfe3023a3572 SHA1 97c13671741e244af8b382eaa1f025ef29242112 SHA256 9e42f2712e2ca368919507a5ddf8ad7cab67f6171aa4d664e9c02ca5d5488b2b
+MISC ChangeLog 4631 RMD160 3404966d483b9f5ed18b5752d83a4a1c4f9faed1 SHA1 cf87aa7e08267a1ba11a6278156a4125f31c320f SHA256 0a7198ca1dfbf98930599badd13f09a252355edc2e8d55a935021b2091b35c7d
 MISC metadata.xml 164 RMD160 fd8b45464863ba55ec9ffa050f8c7580be4ead20 SHA1 988d65b213818898ef7fc0eeedba86d0af4f18fe SHA256 6dd077e0a4bddf8cac0a6d7fb01d5f992a81c85d77d55787d19c6d4ae4c5aeeb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBAgAGBQJPvKQ5AAoJEOSiRoyO7jvo3G8P/2G7R4MaOkGNOlJ3rXM+DV43
+Z3/ZGl3z7p9PbyRdnodQFNfws/eQ9L3kkHHZ/SNEFbvDe5c7zQQ9p539xQ+JTgDp
+64Lo2CJaPuc1Jb4wOgz6zKy5GAoZivsnpAgj+MxyV0XbX0+QDTXS79fIBdnTBSEB
+zJNQNdaRr+V9ODaMfjruUu3miEYIRt/8iq9ZdTKyZdCM83/XUg4ujHOa6JShTFYU
+9o0xsKesy3THUcPKN1BKmowSJ4nESA4671wYEF9uB56PzNiAdVl1c0kakmz5B51m
+I8QwWtVxcxkkIZuAMXMBXIjAspd4X8ttFtsHv2D/P06VB27j1+Z8tTiYaPgKq1AZ
++xX0cyitrZVxVUhkuICkYtECO1l/K/U+N+PRqkcPfYUUIFGLBdz//V/cl/3GPXeY
+1rJy2J41FV+3b+0T1WduMAML8VFE2tufU2myU+lEtY4K2IdWQw3uGPj5VkX+7Xwj
+nt8LhIeCgw/DStkMF0zhF1FBGqkeBugfdGSCg5HDkkRMQbuM8kZrlAOAkxsAAgEk
+OjCNmEirm0QITFmpAeF2jzuMK+8spFBcOO71ImhXo6te+LzU6W4sEY1MY3D8OlLC
+mgFefHjiJshkaZbz8D7JrmRxOJelDnj9Ube5hlKOcR2VOSTx0gJXg8KfVW2MtXpA
++OR8bgrfOeVMK2igUQQK
+=nh6M
+-----END PGP SIGNATURE-----
