@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libvisio
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libvisio/ChangeLog,v 1.26 2012/05/05 08:02:37 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libvisio/ChangeLog,v 1.27 2012/05/23 08:47:44 scarabeus Exp $
+
+  23 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libvisio-0.0.15.ebuild,
+  libvisio-0.0.16.ebuild:
+  Stable on amd64 x86 and ppc. Remove overshadowed.
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> libvisio-0.0.15.ebuild,
   libvisio-0.0.16.ebuild, libvisio-9999.ebuild:
